...
    private lazy var tableView: UITableView = {
        let tableView = UITableView(frame: .zero, style: .plain)
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.delegate = self
        tableView.dataSource = self
        tableView.register(SearchCell.self, forCellReuseIdentifier: SearchCell.identifier)
        tableView.accessibilityIdentifier = "searchTableView"
        return tableView
    }()

    private lazy var logoImageView: UIImageView = {
        let imageView = UIImageView(image: UIImage(systemName: "music.quarternote.3"))
        imageView.translatesAutoresizingMaskIntoConstraints = false
...

    func setupSearchController() {
        DispatchQueue.main.async {
            self.navigationItem.searchController = self.searchController
            self.searchController.obscuresBackgroundDuringPresentation = false
            self.searchController.searchBar.delegate = self
            self.searchController.searchBar.accessibilityIdentifier = "searchBar"
        }
    }

    func setupTableView() {
        DispatchQueue.main.async {
            self.view.addSubview(self.tableView)
...
