...
    public let playButton: UIButton = {
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setImage(UIImage(systemName: "play.circle.fill"), for: .normal)
        button.tintColor = .systemPink
        button.transform = CGAffineTransform(scaleX: 1.3, y: 1.3)
        button.accessibilityIdentifier = "searchPlayButton"
        return button
    }()

    // MARK: - Initialization

    override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
...
